--- a/views/posts/create.ejs
+++ b/views/posts/create.ejs
@@ -12,7 +12,7 @@
         <div class="container mt-5">
             <div class="row"><div class="col-md-12">
                 <% if (messages.error) { %>
-                    <div class="alert alert-danger" role="alert"><%- messages.error %></div>
+                    <div id="alert" class="alert alert-danger" role="alert"><%- messages.error %></div>
                 <% } %>
                 <div class="card border-0 shadow rounded">
                     <div class="card-body">
@@ -36,6 +36,14 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            setTimeout(function(){
+                $('#alert').remove();
+            }, 3000);
+        })
+    </script>    
 </script>
 </body>
 </html>
