--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -13,10 +13,10 @@
         <div class="row">
             <div class="col-md-12">
                 <% if (messages.success) { %>
-                    <div class="alert alert-success" role="alert" ><%- messages.success %></div>
+                    <div id="alert" class="alert alert-success" role="alert" ><%- messages.success %></div>
                 <% } %>
                 <% if (messages.error) { %>
-                    <div class="alert alert-danger" role="alert"><%- messages.error %></div>
+                    <div id="alert" class="alert alert-danger" role="alert"><%- messages.error %></div>
                 <% } %>
                 <div class="card border-0 shadow rounded">
                     <div class="card-body">
@@ -62,5 +62,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     </script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            setTimeout(function(){
+                $('#alert').remove();
+            }, 3000);
+        })
+    </script>    
 </body>
 </html>
